--- a/MyMoment/MainWindow.xib
+++ b/MyMoment/MainWindow.xib
@@ -41,8 +41,8 @@
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iWZ-y2-EFV" userLabel="MainBtn">
                         <rect key="frame" x="34" y="526" width="85" height="39"/>
                         <animations/>
-                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Main" imagePosition="only" alignment="center" alternateImage="Main_Yellow" imageScaling="proportionallyDown" inset="2" id="ve6-l1-p8f">
-                            <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Main" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="ve6-l1-p8f">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
@@ -52,8 +52,8 @@
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dg6-cb-uSi" userLabel="MovieBtn">
                         <rect key="frame" x="116" y="526" width="49" height="39"/>
                         <animations/>
-                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Movie" imagePosition="only" alignment="center" alternateImage="Movie_Yellow" imageScaling="proportionallyDown" inset="2" id="g4N-Ng-WcN">
-                            <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Movie" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="g4N-Ng-WcN">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
@@ -63,8 +63,8 @@
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ECD-jS-5WI" userLabel="MusicBtn">
                         <rect key="frame" x="179" y="526" width="54" height="39"/>
                         <animations/>
-                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Music" imagePosition="only" alignment="center" alternateImage="Music_Yellow" imageScaling="proportionallyDown" inset="2" id="tgz-FE-Bp6">
-                            <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Music" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="tgz-FE-Bp6">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
@@ -77,12 +77,11 @@
                         <font key="font" metaFont="system"/>
                         <tabViewItems>
                             <tabViewItem label="Main" identifier="1" id="HyQ-Kg-7nQ" userLabel="Main">
-                                <view key="view" id="oUm-Kn-FLi">
-                                    <rect key="frame" x="0.0" y="0.0" width="846" height="468"/>
+                                <view key="view" ambiguous="YES" id="oUm-Kn-FLi">
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <scrollView fixedFrame="YES" borderType="none" horizontalLineScroll="30" horizontalPageScroll="10" verticalLineScroll="30" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lK4-mv-d5r">
-                                            <rect key="frame" x="0.0" y="-2" width="423" height="302"/>
+                                            <rect key="frame" x="0.0" y="-470" width="423" height="302"/>
                                             <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="Gdo-Ap-7Gf">
                                                 <rect key="frame" x="0.0" y="0.0" width="423" height="302"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -170,7 +169,7 @@
                                             </scroller>
                                         </scrollView>
                                         <scrollView fixedFrame="YES" borderType="none" horizontalLineScroll="30" horizontalPageScroll="10" verticalLineScroll="30" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTK-z0-Xgf">
-                                            <rect key="frame" x="423" y="-2" width="423" height="302"/>
+                                            <rect key="frame" x="423" y="-470" width="423" height="302"/>
                                             <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="6zH-8k-CwZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="423" height="302"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -258,7 +257,7 @@
                                             </scroller>
                                         </scrollView>
                                         <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qJi-9Y-EWa">
-                                            <rect key="frame" x="171" y="305" width="162" height="162"/>
+                                            <rect key="frame" x="171" y="-163" width="162" height="162"/>
                                             <animations/>
                                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="澳门风云" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="sm4-h1-3Qm">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -266,7 +265,7 @@
                                             </buttonCell>
                                         </button>
                                         <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sde-Q7-EbJ">
-                                            <rect key="frame" x="528" y="308" width="162" height="162"/>
+                                            <rect key="frame" x="528" y="-160" width="162" height="162"/>
                                             <animations/>
                                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Let it go" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="puO-bO-n3m">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -274,7 +273,7 @@
                                             </buttonCell>
                                         </button>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eEi-nI-cEp">
-                                            <rect key="frame" x="0.0" y="294" width="88" height="29"/>
+                                            <rect key="frame" x="0.0" y="-174" width="88" height="29"/>
                                             <animations/>
                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="justified" title="电影风云榜：" id="seN-An-PZd">
                                                 <font key="font" size="15" name="STHeitiSC-Medium"/>
@@ -283,7 +282,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qBB-HH-o6Z">
-                                            <rect key="frame" x="423" y="294" width="88" height="29"/>
+                                            <rect key="frame" x="423" y="-174" width="88" height="29"/>
                                             <animations/>
                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="justified" title="音乐风云榜：" id="zaM-Tv-TGz">
                                                 <font key="font" size="15" name="STHeitiSC-Medium"/>
@@ -296,7 +295,7 @@
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Moive" identifier="2" id="MmW-dJ-lrK" userLabel="Movie">
-                                <view key="view" ambiguous="YES" id="9xu-rG-urV">
+                                <view key="view" id="9xu-rG-urV">
                                     <rect key="frame" x="0.0" y="0.0" width="846" height="468"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -315,12 +314,12 @@
                                             </clipView>
                                             <animations/>
                                             <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="HaJ-uK-QET">
-                                                <rect key="frame" x="1" y="452" width="829" height="15"/>
+                                                <rect key="frame" x="1" y="1" width="0.0" height="15"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <animations/>
                                             </scroller>
                                             <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="JTB-Nl-YVp">
-                                                <rect key="frame" x="830" y="1" width="15" height="451"/>
+                                                <rect key="frame" x="1" y="1" width="15" height="0.0"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <animations/>
                                             </scroller>
@@ -745,7 +744,7 @@
                     <searchField wantsLayer="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TNq-U1-sn8">
                         <rect key="frame" x="810" y="533" width="139" height="22"/>
                         <animations/>
-                        <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="kSL-Qz-yhM">
+                        <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" recentsAutosaveName="" id="kSL-Qz-yhM">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -783,11 +782,8 @@
         <image name="Let it go" width="1205.7366943359375" height="678.2901611328125"/>
         <image name="Logo" width="320.16000366210938" height="79.919998168945312"/>
         <image name="Main" width="837.81817626953125" height="837.81817626953125"/>
-        <image name="Main_Yellow" width="837.81817626953125" height="837.81817626953125"/>
         <image name="Movie" width="837.81817626953125" height="837.81817626953125"/>
-        <image name="Movie_Yellow" width="837.81817626953125" height="837.81817626953125"/>
         <image name="Music" width="837.81817626953125" height="837.81817626953125"/>
-        <image name="Music_Yellow" width="837.81817626953125" height="837.81817626953125"/>
         <image name="澳门风云" width="500" height="332"/>
     </resources>
 </document>
